--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
   ],
   "require": {
     "php" : ">=5.6.4",
-    "ozparr/admin_templeta": "@dev"
+    "ozparr/admin_templeta": "dev-master"
   },
   "require-dev": {
     "phpunit/phpunit" : "~5.0"
