--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "ozparr/admin_login",
+  "name": "luisozparr/admin_login",
   "description": "Templeta AdminLTE para laravel",
   "license": "MIT",
   "authors": [
@@ -10,7 +10,8 @@
   ],
   "require": {
     "php" : ">=5.6.4",
-    "ozparr/admin_templeta": "dev-master"
+    "jeroennoten/laravel-adminlte": "^1.24",
+    "laracasts/flash": ">=3.0.1"
   },
   "require-dev": {
     "phpunit/phpunit" : "~5.0"
