--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,9 @@
     }
   ],
   "require": {
-    "php" : ">=5.6.4",
-    "jeroennoten/laravel-adminlte": "^1.24",
+    "php" : "^7.2",
+    "jeroennoten/laravel-adminlte": "^3.0",
+    "luisozparr/adminlte_laravel_components": "^1.0",
     "laracasts/flash": ">=3.0.1"
   },
   "require-dev": {
